style(genre): clean code
xóa bỏ các dòng code dư thừa và cấu trúc lại code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="genres">Genres</string>
     <string name="manhua">Manhua</string>
     <string name="manhwa">Manhwa</string>
+    <string name="find_genre">Find Genre</string>
 </resources>
