feat(library): add favourite and recents, add animation fragment
thêm tính năng chọn favourite hoặc recents để hiện thị lên view, thêm hiệu ứng khi chuyển sang màn hình chi tiết truyện

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="manhua">Manhua</string>
     <string name="manhwa">Manhwa</string>
     <string name="find_genre">Find Genre</string>
+    <string name="library">Library</string>
 </resources>
