refactor(library): clean code
xoá các log, định dạng code lại cho dễ đọc và theo chuẩn

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="manhwa">Manhwa</string>
     <string name="find_genre">Find Genre</string>
     <string name="library">Library</string>
+    <string name="recents">Recents</string>
+    <string name="favourite">Favourite</string>
 </resources>
